unpackaged/main/default/objects/d_wh__Callout_Monthly_Usage__c/d_wh__Callout_Monthly_Usage__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Callout Monthly Usage</label>
</CustomObject>