unpackaged/main/default/objects/d_wh__Callout_Monthly_Usage__c/fields/d_wh__Callouts__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Callouts__c</fullName>
    <label>Callouts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>