unpackaged/main/default/objects/d_wh__Callout_Monthly_Usage__c/fields/d_wh__Limits_Notification_2_Sent__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Limits_Notification_2_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limits Notification 2 Sent</label>
    <type>Checkbox</type>
</CustomField>